fix: Alteração do z-index da navbar e adicção do component header à home

--- a/src/app/shared/components/navbar/navbar.component.scss
+++ b/src/app/shared/components/navbar/navbar.component.scss
@@ -4,6 +4,9 @@
   box-sizing: border-box;
 }
 
+nav {
+  z-index: 1000;
+}
 .nav-bar {
   height: 70px;
 
